--- a/_includes/product.html
+++ b/_includes/product.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Conference Aquamarine - Pingendo template</title>
+  <title>{{title}}</title>
   <meta name="description" content="Free Bootstrap 4 Pingendo Aquamarine template for unique events.">
   <meta name="keywords" content="Pingendo conference event aquamarine free template bootstrap 4">
   <!-- CSS dependencies -->
@@ -20,24 +20,16 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1></h1>  
-
+          <h1>{{title}}</h1>  
+          <p>{{description}}</p>
         </div>
       </div>
-      <div class="row">
  
-        <div pi-repeat="key in (collections.tshirt)" class="col-6 col-lg-4 animate-in-left" >
-          <a  href="#">----
-          </a>
-        </div>
-    </div>
-
       </div>
 
    
 
       </div>
-    </div>
   
   <!-- Schedule -->
   <!-- Sponsor logos -->
