--- a/_includes/product.html
+++ b/_includes/product.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>{{title}}</h1>  
+          <h1>title : {{title}}</h1>  
           <p>{{description}}</p>
           <p>{{date}}</p>
 
