--- a/_includes/product.html
+++ b/_includes/product.html
@@ -20,8 +20,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h1>title : {{title}}</h1>  
-          <p>{{description}}</p>
+          <h1 pi-bind="title">a title</h1>  
+          <p pi-bind="description">a description</p>
           <p>{{date}}</p>
 
         </div>
