--- a/_includes/product.html
+++ b/_includes/product.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1 pi-bind="title">a title</h1>  
-          <p pi-bind="description">a description</p>
+          <p pi-bind="description">default</p>
           <p>{{date}}</p>
 
         </div>
