--- a/_includes/product.html
+++ b/_includes/product.html
@@ -24,7 +24,8 @@
           <p pi-bind="description">default d</p>
           <p>{{date}}</p>
 
-        </div>
+          tags  <p pi-bind="tags"></p>
+        </div>  
       </div>
  
       </div>
