--- a/_includes/product2020.html
+++ b/_includes/product2020.html
@@ -27,6 +27,9 @@
           <p pi-bind="description">default d</p>
           <p>{{date}}</p>
 
+          tags  <p pi-bind="tags"></p>
+
+          
         </div>
       </div>
  
