--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1009,6 +1009,15 @@
           <p>{{date}}</p>
 
           tags  <p pi-bind="tags"></p>
+
+
+
+          <div pi-repeat="p of collections.tshirt" class="col-6 col-lg-4 animate-in-left">
+            <a href="{{%-p.url%}}">  Link2 a {{%-p.data.title%}}</a>
+          </div>
+
+
+          
         </div>  
       </div>
  
