--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1010,6 +1010,10 @@
 
 
 
+          <div pi-repeat="p of collections.tshirt" class="col-6 col-lg-4 animate-in-left">
+            <a href="{{%-p.url%}}">  Link2 a {{%-p.data.title%}}</a>
+          </div>
+
 
 
         </div>  
