--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1011,6 +1011,14 @@
           {{%-title%}}
           {{%-description%}}
 
+          testimonials
+
+          <div pi-for="t of testimonials">
+            <p pi-bind="t.author"></p>
+            <p pi-bind="t.quote"></p>
+          </div>
+
+
         </div>  
       </div>
  
