--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1006,9 +1006,9 @@
         <div class="col-md-12 text-center" pi-selection="true">
           <h1 pi-bind="title" contenteditable="true" class="text-center6">default t</h1>  
           <p pi-bind="description">default d</p>
-          tags  <p pi-bind="tags"></p>
+          tags->  <p pi-bind="tags"></p>
 
-          {{%-title%}}
+          {{%-title%}}2
           {{%-description%}}
 
           testimonials
