--- a/_includes/oldProduct.html
+++ b/_includes/oldProduct.html
@@ -1,308 +1,50 @@
 
-
-<html><head><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
-    
-                                .editable:hover {
-                                  cursor: pointer;
-                                }
-    
-                                .h-100 {
-                                  max-height:80%;
-                                }
-    
-                                *[contenteditable='true'] {
-                                  outline: none !important;
-                                }
-    
-                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
-                                  min-width: 100%;
-                                  min-height: 40px;
-                                  background: #aaa;
-                                }
-    
-                                body > *:empty {
-                                  min-height: 120px;
-                                }
-    
-                                a {
-                                  cursor: auto !important;
-                                  -webkit-user-select: text !important;
-                                  -moz-select: text !important;
-                                  -ms-select: text !important;
-                                  user-select: text !important;
-                                }
-    
-                                .pi-scaffhold *[contenteditable='true'] {
-                                  outline:none !important;
-                                  background: red;
-                                }
-    
-                                .pi-scaffhold *[class*='col-'] *  {
-                                  pointer-events: none !important;
-                                }
-    
-                            </style>
-  <!-- CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-<!-- jQuery and JS bundle w/ Popper.js -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</head><body>
-  <div pi-selection="true">
-    <div class="container">
+<html><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- PAGE settings -->
+  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+  <title>{{title}}</title>
+  <meta name="description" content="Free Bootstrap 4 Pingendo Aquamarine template for unique events.">
+  <meta name="keywords" content="Pingendo conference event aquamarine free template bootstrap 4">
+  <!-- CSS dependencies -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+  <!-- Script: Make my navbar transparent when the document is scrolled to top -->
+</head><body class="text-center">
+  <!-- Navbar -->
+  <!-- Cover -->
+  <!-- Parallax section -->
+  <!-- Speakers -->
+  <div class="py-5 bg-light" id="speakers">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col">
-          <h1>STATIC INDEX </h1> 
-        </div>
+        <div class="col-md-12">
+          <h1 pi-bind="title">OLD PRODUCT</h1>  
+          <p pi-bind="description">default d</p>
+          <p>{{date}}</p>
+
+          tags  <p pi-bind="tags"></p>
+        </div>  
       </div>
-    </div>
-  </div>
+ 
+      </div>
+
+   
+
+      </div>
+  
+  <!-- Schedule -->
+  <!-- Sponsor logos -->
+  <!-- Call to action -->
+  <!-- Footer -->
+  <!-- JavaScript dependencies -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" crossorigin="anonymous" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"></script>
+  <!-- Script: Smooth scrolling between anchors in the same page -->
+  <script src="js/smooth-scroll.js"></script>
+
 
 </body></html>
