--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1711,7 +1711,7 @@
           testimonials
 
 
-          <div pi-if="testimonials">
+          <div pi-if="locals.testimonials">
 
           <div pi-repeat="t of testimonials">
             
