--- a/_includes/product.html
+++ b/_includes/product.html
@@ -696,6 +696,88 @@
                                   pointer-events: none !important;
                                 }
     
+                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
+    
+                                .editable:hover {
+                                  cursor: pointer;
+                                }
+    
+                                .h-100 {
+                                  max-height:80%;
+                                }
+    
+                                *[contenteditable='true'] {
+                                  outline: none !important;
+                                }
+    
+                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
+                                  min-width: 100%;
+                                  min-height: 40px;
+                                  background: #aaa;
+                                }
+    
+                                body > *:empty {
+                                  min-height: 120px;
+                                }
+    
+                                a {
+                                  cursor: auto !important;
+                                  -webkit-user-select: text !important;
+                                  -moz-select: text !important;
+                                  -ms-select: text !important;
+                                  user-select: text !important;
+                                }
+    
+                                .pi-scaffhold *[contenteditable='true'] {
+                                  outline:none !important;
+                                  background: red;
+                                }
+    
+                                .pi-scaffhold *[class*='col-'] *  {
+                                  pointer-events: none !important;
+                                }
+    
+                            </style><base href="https://master--peleventy.netlify.app" pi-flag="transient"><style type="text/css" pi-flag="transient">
+    
+                                .editable:hover {
+                                  cursor: pointer;
+                                }
+    
+                                .h-100 {
+                                  max-height:80%;
+                                }
+    
+                                *[contenteditable='true'] {
+                                  outline: none !important;
+                                }
+    
+                                div:empty, p:empty, h1:empty, h2:empty, h3:empty, h4:empty,h5:empty,h6:empty,ul:empty{
+                                  min-width: 100%;
+                                  min-height: 40px;
+                                  background: #aaa;
+                                }
+    
+                                body > *:empty {
+                                  min-height: 120px;
+                                }
+    
+                                a {
+                                  cursor: auto !important;
+                                  -webkit-user-select: text !important;
+                                  -moz-select: text !important;
+                                  -ms-select: text !important;
+                                  user-select: text !important;
+                                }
+    
+                                .pi-scaffhold *[contenteditable='true'] {
+                                  outline:none !important;
+                                  background: red;
+                                }
+    
+                                .pi-scaffhold *[class*='col-'] *  {
+                                  pointer-events: none !important;
+                                }
+    
                             </style><base href="https://undefined--peleventy.netlify.com" pi-flag="transient"><style type="text/css" pi-flag="transient">
     
                                 .editable:hover {
@@ -1701,7 +1783,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 pi-bind="title"  class="text-center6">default t</h1>  
+          <h1 pi-bind="title" class="text-center6">default t</h1>  
           <p pi-bind="description">default d</p>
           tags-&gt;  
 
